working on exercise 3 and 4

--- a/Module_1/exercise_4.html
+++ b/Module_1/exercise_4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Exercise 4</title>
-   <script src="exercise_4.js"></script>
+    <script src="exercise_4.js" defer></script>
 </head>
 <body>
 
