--- a/Module_1/exercise_3.html
+++ b/Module_1/exercise_3.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Exercise 3</title>
-    <script src="exercise_3.js"></script>
+    <script src="exercise_3.js" defer></script>
 </head>
 <body>
-
+    <p id="sum"></p>
+    <p id="product"></p>
+    <p id="average"></p>
 </body>
 </html>
